@@ -71,14 +71,32 @@ public class NoRenderGui extends Screen {
         currentY += (SPACING_Y * 6) + SECTION_MARGIN;
 
         addTechnicalButtons(leftCol, rightCol, currentY + 5);
+        currentY += (SPACING_Y * 5) + SECTION_MARGIN;
+
+        addHudButtons(leftCol, rightCol, currentY + 5);
         currentY += (SPACING_Y * 6) + SECTION_MARGIN;
+
+        addWorldRenderButtons(leftCol, rightCol, currentY + 5);
+        currentY += (SPACING_Y * 3) + SECTION_MARGIN;
+
+        addMoreParticleButtons(leftCol, rightCol, currentY + 5);
+        currentY += (SPACING_Y * 11) + SECTION_MARGIN;
+
+        addExtraParticleButtons(leftCol, rightCol, currentY + 5);
+        currentY += (SPACING_Y * 13) + SECTION_MARGIN;
+
+        addMoreEntityButtons(leftCol, rightCol, currentY + 5);
+        currentY += (SPACING_Y * 6) + SECTION_MARGIN;
+
+        addMiscButtons(leftCol, rightCol, currentY + 5);
+        currentY += (SPACING_Y * 3) + SECTION_MARGIN;
 
         contentHeight = currentY;
         maxScroll = Math.max(0, contentHeight - (height - 90));
 
         doneButton = Button.builder(
                 Component.literal("SAVE & EXIT").withStyle(ChatFormatting.AQUA, ChatFormatting.BOLD),
-                b -> this.onClose()
+                _ -> this.onClose()
         ).bounds(centerX - 100, height - 30, 200, 20).build();
         addRenderableWidget(doneButton);
 
@@ -152,7 +170,19 @@ public class NoRenderGui extends Screen {
             y += (SPACING_Y * 8) + SECTION_MARGIN;
             renderSectionGroup(ctx, panelX, y, panelW, 6, "Sculk & Trial Chambers");
             y += (SPACING_Y * 6) + SECTION_MARGIN;
-            renderSectionGroup(ctx, panelX, y, panelW, 6, "Nether, End & Game");
+            renderSectionGroup(ctx, panelX, y, panelW, 5, "Nether, End & Game");
+            y += (SPACING_Y * 5) + SECTION_MARGIN;
+            renderSectionGroup(ctx, panelX, y, panelW, 6, "HUD Elements");
+            y += (SPACING_Y * 6) + SECTION_MARGIN;
+            renderSectionGroup(ctx, panelX, y, panelW, 3, "World Render");
+            y += (SPACING_Y * 3) + SECTION_MARGIN;
+            renderSectionGroup(ctx, panelX, y, panelW, 11, "More Particles");
+            y += (SPACING_Y * 11) + SECTION_MARGIN;
+            renderSectionGroup(ctx, panelX, y, panelW, 13, "Extra Particles");
+            y += (SPACING_Y * 13) + SECTION_MARGIN;
+            renderSectionGroup(ctx, panelX, y, panelW, 6, "More Entities");
+            y += (SPACING_Y * 6) + SECTION_MARGIN;
+            renderSectionGroup(ctx, panelX, y, panelW, 2, "Misc");
         } else {
             ctx.text(font, Component.literal("§7Results for: §b\"" + searchQuery + "\""), panelX, 68, 0xFFFFFF);
         }
@@ -185,7 +215,7 @@ public class NoRenderGui extends Screen {
     public boolean mouseScrolled(double mouseX, double mouseY, double horizontalAmount, double verticalAmount) {
         if (maxScroll > 0) {
             int oldOffset = scrollOffset;
-            scrollOffset = (int) Math.max(0, Math.min(maxScroll, scrollOffset - (verticalAmount * 25)));
+            scrollOffset = (int) Math.clamp(scrollOffset - (verticalAmount * 25), 0, maxScroll);
             int diff = oldOffset - scrollOffset;
             if (diff != 0) {
                 for (WidgetEntry entry : widgetEntries) {
@@ -245,7 +275,7 @@ public class NoRenderGui extends Screen {
     @Override
     public void onClose() {
         NoRenderCfg.saveConfiguration();
-        if (minecraft != null) minecraft.setScreenAndShow(parent);
+        minecraft.setScreenAndShow(parent);
     }
 
     private void addOverlayButtons(int left, int right, int y) {
@@ -255,11 +285,10 @@ public class NoRenderGui extends Screen {
         add(right, y + SPACING_Y, "Darkness", "Hide darkness", NoRenderCfg.noDarkness, v -> NoRenderCfg.noDarkness = v);
         add(left, y + SPACING_Y * 2, "Pumpkin", "Hide pumpkin blur", NoRenderCfg.noPumpkinOverlay, v -> NoRenderCfg.noPumpkinOverlay = v);
         add(right, y + SPACING_Y * 2, "Vignette", "Hide dark corners", NoRenderCfg.noVignette, v -> NoRenderCfg.noVignette = v);
-        add(left, y + SPACING_Y * 3, "Enchant Glint", "Hide item glow", NoRenderCfg.noEnchantmentGlint, v -> NoRenderCfg.noEnchantmentGlint = v);
-        add(right, y + SPACING_Y * 3, "PowderSnow", "Removes powdersnow overlay", NoRenderCfg.noPowderedSnowOverlay, v -> NoRenderCfg.noPowderedSnowOverlay = v);
-        add(left, y + SPACING_Y * 4, "Spyglass", "Hide spyglass container", NoRenderCfg.noSpyglassOverlay, v -> NoRenderCfg.noSpyglassOverlay = v);
-        add(right, y + SPACING_Y * 4, "Liquid", "Hide water/lava tint", NoRenderCfg.noLiquidOverlay, v -> NoRenderCfg.noLiquidOverlay = v);
-        add(left, y + SPACING_Y * 5, "Blindness", "Hide blindness effect", NoRenderCfg.noBlindness, v -> NoRenderCfg.noBlindness = v);
+        add(left, y + SPACING_Y * 3, "PowderSnow", "Removes powdersnow overlay", NoRenderCfg.noPowderedSnowOverlay, v -> NoRenderCfg.noPowderedSnowOverlay = v);
+        add(right, y + SPACING_Y * 3, "Spyglass", "Hide spyglass container", NoRenderCfg.noSpyglassOverlay, v -> NoRenderCfg.noSpyglassOverlay = v);
+        add(left, y + SPACING_Y * 4, "Liquid", "Hide water/lava tint", NoRenderCfg.noLiquidOverlay, v -> NoRenderCfg.noLiquidOverlay = v);
+        add(right, y + SPACING_Y * 4, "Blindness", "Hide blindness effect", NoRenderCfg.noBlindness, v -> NoRenderCfg.noBlindness = v);
     }
 
     private void addWorldButtons(int left, int right, int y) {
@@ -276,9 +305,7 @@ public class NoRenderGui extends Screen {
         add(left, y + SPACING_Y * 5, "Glow", "Hide entity outlines", NoRenderCfg.noGlow, v -> NoRenderCfg.noGlow = v);
         add(right, y + SPACING_Y * 5, "Grass & Flowers", "Hide grass and flowers", NoRenderCfg.noGrassAndFlowers, v -> {
             NoRenderCfg.noGrassAndFlowers = v;
-            if (minecraft != null && minecraft.levelExtractor != null) {
-                minecraft.levelExtractor.allChanged();
-            }
+            minecraft.levelExtractor.allChanged();
         });
     }
 
@@ -321,14 +348,96 @@ public class NoRenderGui extends Screen {
         add(right, y, "Soul Particles", "Soul sand effects", NoRenderCfg.noSoulParticles, v -> NoRenderCfg.noSoulParticles = v);
         add(left, y + SPACING_Y, "Dragon Breath", "Ender Dragon gas", NoRenderCfg.noDragonBreath, v -> NoRenderCfg.noDragonBreath = v);
         add(right, y + SPACING_Y, "Drips", "Water/Lava drips", NoRenderCfg.noDripParticles, v -> NoRenderCfg.noDripParticles = v);
-        add(left, y + SPACING_Y * 2, "Chests", "Hide chest models", NoRenderCfg.noChests, v -> NoRenderCfg.noChests = v);
-        add(right, y + SPACING_Y * 2, "Boss Bar", "Hide boss health bar", NoRenderCfg.noBossBar, v -> NoRenderCfg.noBossBar = v);
-        add(left, y + SPACING_Y * 3, "Scoreboard", "Hide sidebar scoreboard", NoRenderCfg.noScoreboard, v -> NoRenderCfg.noScoreboard = v);
-        add(right, y + SPACING_Y * 3, "Banners", "Hide banner models", NoRenderCfg.noBanners, v -> NoRenderCfg.noBanners = v);
-        add(left, y + SPACING_Y * 4, "Shulker Boxes", "Hide shulker box models", NoRenderCfg.noShulkerBoxes, v -> NoRenderCfg.noShulkerBoxes = v);
-        add(right, y + SPACING_Y * 4, "Sign Text", "Hide text rendered on signs", NoRenderCfg.noSignText, v -> NoRenderCfg.noSignText = v);
-        add(left, y + SPACING_Y * 5, "Beacon Beam", "Hide beacon beam column", NoRenderCfg.noBeaconBeam, v -> NoRenderCfg.noBeaconBeam = v);
-        add(right, y + SPACING_Y * 5, "Conduit Eye", "Hide conduit effects", NoRenderCfg.noConduitEye, v -> NoRenderCfg.noConduitEye = v);
+        add(left, y + SPACING_Y * 2, "Boss Bar", "Hide boss health bar", NoRenderCfg.noBossBar, v -> NoRenderCfg.noBossBar = v);
+        add(right, y + SPACING_Y * 2, "Scoreboard", "Hide sidebar scoreboard", NoRenderCfg.noScoreboard, v -> NoRenderCfg.noScoreboard = v);
+        add(left, y + SPACING_Y * 3, "Sign Text", "Hide text rendered on signs", NoRenderCfg.noSignText, v -> NoRenderCfg.noSignText = v);
+        add(right, y + SPACING_Y * 3, "Beacon Beam", "Hide beacon beam column", NoRenderCfg.noBeaconBeam, v -> NoRenderCfg.noBeaconBeam = v);
+        add(left, y + SPACING_Y * 4, "Conduit Eye", "Hide conduit effects", NoRenderCfg.noConduitEye, v -> NoRenderCfg.noConduitEye = v);
+    }
+
+    private void addHudButtons(int left, int right, int y) {
+        add(left, y, "Crosshair", "Hide crosshair", NoRenderCfg.noCrosshair, v -> NoRenderCfg.noCrosshair = v);
+        add(right, y, "Hotbar", "Hide hotbar and offhand", NoRenderCfg.noHotbar, v -> NoRenderCfg.noHotbar = v);
+        add(left, y + SPACING_Y, "Chat", "Hide chat messages", NoRenderCfg.noChat, v -> NoRenderCfg.noChat = v);
+        add(right, y + SPACING_Y, "Title/Actionbar", "Hide title and action bar", NoRenderCfg.noTitleAndActionbar, v -> NoRenderCfg.noTitleAndActionbar = v);
+        add(left, y + SPACING_Y * 2, "Player List", "Hide tab list", NoRenderCfg.noPlayerList, v -> NoRenderCfg.noPlayerList = v);
+        add(right, y + SPACING_Y * 2, "Advancements", "Hide advancement toasts", NoRenderCfg.noAdvancementToast, v -> NoRenderCfg.noAdvancementToast = v);
+    }
+
+    private void addWorldRenderButtons(int left, int right, int y) {
+        add(left, y, "Clouds", "Hide cloud layer", NoRenderCfg.noClouds, v -> NoRenderCfg.noClouds = v);
+        add(right, y, "Sky", "Hide sky, stars, sun, moon", NoRenderCfg.noSky, v -> NoRenderCfg.noSky = v);
+        add(left, y + SPACING_Y, "Rain Splash", "Hide rain splash particles", NoRenderCfg.noRainSplash, v -> NoRenderCfg.noRainSplash = v);
+    }
+
+    private void addMoreParticleButtons(int left, int right, int y) {
+        add(left, y, "Spore Blossom", "Spore blossom petals", NoRenderCfg.noSporeBlossom, v -> NoRenderCfg.noSporeBlossom = v);
+        add(right, y, "Cherry Leaves", "Falling cherry leaves", NoRenderCfg.noCherryLeaves, v -> NoRenderCfg.noCherryLeaves = v);
+        add(left, y + SPACING_Y, "Glow Ink", "Glow squid ink clouds", NoRenderCfg.noGlowSquidInk, v -> NoRenderCfg.noGlowSquidInk = v);
+        add(right, y + SPACING_Y, "Snowflake", "Snow falling particles", NoRenderCfg.noSnowflake, v -> NoRenderCfg.noSnowflake = v);
+        add(left, y + SPACING_Y * 2, "Sculk Soul", "Soul particles from sculk", NoRenderCfg.noSculkSoul, v -> NoRenderCfg.noSculkSoul = v);
+        add(right, y + SPACING_Y * 2, "Breeze Wind", "Breeze gust particles", NoRenderCfg.noBreezeWind, v -> NoRenderCfg.noBreezeWind = v);
+        add(left, y + SPACING_Y * 3, "Electric Spark", "Lightning rod sparks", NoRenderCfg.noElectricSpark, v -> NoRenderCfg.noElectricSpark = v);
+        add(right, y + SPACING_Y * 3, "Falling Dripstone", "Dripstone water/lava", NoRenderCfg.noFallingDripstone, v -> NoRenderCfg.noFallingDripstone = v);
+        add(left, y + SPACING_Y * 4, "Tinted Leaves", "Hide tinted leaf particles", NoRenderCfg.noTintedLeaves, v -> NoRenderCfg.noTintedLeaves = v);
+        add(right, y + SPACING_Y * 4, "Dust", "Hide dust particles", NoRenderCfg.noDust, v -> NoRenderCfg.noDust = v);
+        add(left, y + SPACING_Y * 5, "Block Marker", "Hide block marker", NoRenderCfg.noBlockMarker, v -> NoRenderCfg.noBlockMarker = v);
+        add(right, y + SPACING_Y * 5, "Block Crumble", "Hide block crumble", NoRenderCfg.noBlockCrumble, v -> NoRenderCfg.noBlockCrumble = v);
+        add(left, y + SPACING_Y * 6, "Composter", "Hide composter particles", NoRenderCfg.noComposter, v -> NoRenderCfg.noComposter = v);
+        add(right, y + SPACING_Y * 6, "Elder Guardian", "Hide elder guardian", NoRenderCfg.noElderGuardian, v -> NoRenderCfg.noElderGuardian = v);
+        add(left, y + SPACING_Y * 7, "Allay", "Hide allay notes", NoRenderCfg.noAllay, v -> NoRenderCfg.noAllay = v);
+        add(right, y + SPACING_Y * 7, "Firefly", "Hide fireflies", NoRenderCfg.noFirefly, v -> NoRenderCfg.noFirefly = v);
+        add(left, y + SPACING_Y * 8, "Pale Oak Leaves", "Hide pale oak leaves", NoRenderCfg.noPaleOakLeaves, v -> NoRenderCfg.noPaleOakLeaves = v);
+        add(right, y + SPACING_Y * 8, "Squid Ink", "Hide squid ink", NoRenderCfg.noSquidInk, v -> NoRenderCfg.noSquidInk = v);
+        add(left, y + SPACING_Y * 9, "Egg Crack", "Hide egg crack", NoRenderCfg.noEggCrack, v -> NoRenderCfg.noEggCrack = v);
+        add(right, y + SPACING_Y * 9, "Sulfur", "Hide sulfur particles", NoRenderCfg.noSulfur, v -> NoRenderCfg.noSulfur = v);
+        add(left, y + SPACING_Y * 10, "Noxious Gas", "Hide noxious gas", NoRenderCfg.noNoxiousGas, v -> NoRenderCfg.noNoxiousGas = v);
+        add(right, y + SPACING_Y * 10, "Geyser", "Hide geyser particles", NoRenderCfg.noGeyser, v -> NoRenderCfg.noGeyser = v);
+    }
+
+    private void addExtraParticleButtons(int left, int right, int y) {
+        add(left, y, "Glow Particle", "Hide glow particles", NoRenderCfg.noGlowParticle, v -> NoRenderCfg.noGlowParticle = v);
+        add(right, y, "Wax On/Off", "Hide wax particles", NoRenderCfg.noWax, v -> NoRenderCfg.noWax = v);
+        add(left, y + SPACING_Y, "Scrape", "Hide scrape particles", NoRenderCfg.noScrape, v -> NoRenderCfg.noScrape = v);
+        add(right, y + SPACING_Y, "Copper Flame", "Hide copper fire flame", NoRenderCfg.noCopperFireFlame, v -> NoRenderCfg.noCopperFireFlame = v);
+        add(left, y + SPACING_Y * 2, "Nautilus", "Hide nautilus particles", NoRenderCfg.noNautilus, v -> NoRenderCfg.noNautilus = v);
+        add(right, y + SPACING_Y * 2, "Dolphin", "Hide dolphin particles", NoRenderCfg.noDolphin, v -> NoRenderCfg.noDolphin = v);
+        add(left, y + SPACING_Y * 3, "Underwater", "Hide underwater particles", NoRenderCfg.noUnderwater, v -> NoRenderCfg.noUnderwater = v);
+        add(right, y + SPACING_Y * 3, "Reverse Portal", "Hide reverse portal", NoRenderCfg.noReversePortal, v -> NoRenderCfg.noReversePortal = v);
+        add(left, y + SPACING_Y * 4, "End Rod", "Hide end rod particles", NoRenderCfg.noEndRod, v -> NoRenderCfg.noEndRod = v);
+        add(right, y + SPACING_Y * 4, "Mycelium", "Hide mycelium particles", NoRenderCfg.noMycelium, v -> NoRenderCfg.noMycelium = v);
+        add(left, y + SPACING_Y * 5, "Spit", "Hide spit particles", NoRenderCfg.noSpit, v -> NoRenderCfg.noSpit = v);
+        add(right, y + SPACING_Y * 5, "Sneeze", "Hide sneeze particles", NoRenderCfg.noSneeze, v -> NoRenderCfg.noSneeze = v);
+        add(left, y + SPACING_Y * 6, "Witch", "Hide witch particles", NoRenderCfg.noWitchParticle, v -> NoRenderCfg.noWitchParticle = v);
+        add(right, y + SPACING_Y * 6, "Fishing", "Hide fishing particles", NoRenderCfg.noFishing, v -> NoRenderCfg.noFishing = v);
+        add(left, y + SPACING_Y * 7, "Angry Villager", "Hide angry villager", NoRenderCfg.noAngryVillager, v -> NoRenderCfg.noAngryVillager = v);
+        add(right, y + SPACING_Y * 7, "Happy Villager", "Hide happy villager", NoRenderCfg.noHappyVillager, v -> NoRenderCfg.noHappyVillager = v);
+        add(left, y + SPACING_Y * 8, "Crimson Spore", "Hide crimson spores", NoRenderCfg.noCrimsonSpore, v -> NoRenderCfg.noCrimsonSpore = v);
+        add(right, y + SPACING_Y * 8, "Warped Spore", "Hide warped spores", NoRenderCfg.noWarpedSpore, v -> NoRenderCfg.noWarpedSpore = v);
+        add(left, y + SPACING_Y * 9, "Trial Spawner Eject", "Hide trial spawner ejection", NoRenderCfg.noTrialSpawnerEjection, v -> NoRenderCfg.noTrialSpawnerEjection = v);
+        add(right, y + SPACING_Y * 9, "Ominous Item", "Hide ominous item spawn", NoRenderCfg.noOminousItemSpawn, v -> NoRenderCfg.noOminousItemSpawn = v);
+        add(left, y + SPACING_Y * 10, "Item Slime", "Hide item slime particles", NoRenderCfg.noItemSlime, v -> NoRenderCfg.noItemSlime = v);
+        add(right, y + SPACING_Y * 10, "Item Cobweb", "Hide item cobweb particles", NoRenderCfg.noItemCobweb, v -> NoRenderCfg.noItemCobweb = v);
+        add(left, y + SPACING_Y * 11, "Item Snowball", "Hide item snowball particles", NoRenderCfg.noItemSnowball, v -> NoRenderCfg.noItemSnowball = v);
+        add(right, y + SPACING_Y * 11, "Dust Plume", "Hide dust plume particles", NoRenderCfg.noDustPlume, v -> NoRenderCfg.noDustPlume = v);
+        add(left, y + SPACING_Y * 12, "Dust Pillar", "Hide dust pillar particles", NoRenderCfg.noDustPillar, v -> NoRenderCfg.noDustPillar = v);
+        add(right, y + SPACING_Y * 12, "Pause Growth", "Pause mob growth particles", NoRenderCfg.noPauseMobGrowth, v -> NoRenderCfg.noPauseMobGrowth = v);
+        add(left, y + SPACING_Y * 13, "Sulfur Cubes", "Hide sulfur cube goo", NoRenderCfg.noSulfurCubes, v -> NoRenderCfg.noSulfurCubes = v);
+        add(right, y + SPACING_Y * 13, "Reset Growth", "Hide reset mob growth", NoRenderCfg.noResetMobGrowth, v -> NoRenderCfg.noResetMobGrowth = v);
+    }
+
+    private void addMoreEntityButtons(int left, int right, int y) {
+        add(left, y, "Minecarts", "Hide all minecarts", NoRenderCfg.noMinecarts, v -> NoRenderCfg.noMinecarts = v);
+        add(right, y, "Boats", "Hide all boats", NoRenderCfg.noBoats, v -> NoRenderCfg.noBoats = v);
+        add(left, y + SPACING_Y, "Paintings", "Hide paintings", NoRenderCfg.noPaintings, v -> NoRenderCfg.noPaintings = v);
+        add(right, y + SPACING_Y, "Leash Knots", "Hide leash knots", NoRenderCfg.noLeashKnots, v -> NoRenderCfg.noLeashKnots = v);
+        add(left, y + SPACING_Y * 2, "Falling Blocks", "Hide falling blocks", NoRenderCfg.noFallingBlocks, v -> NoRenderCfg.noFallingBlocks = v);
+        add(right, y + SPACING_Y * 2, "Projectiles", "Hide arrows, snowballs, fireballs", NoRenderCfg.noProjectiles, v -> NoRenderCfg.noProjectiles = v);
+    }
+
+    private void addMiscButtons(int left, int right, int y) {
+        add(left, y, "Block Crack", "Hide block breaking overlay", NoRenderCfg.noBlockBreakCrack, v -> NoRenderCfg.noBlockBreakCrack = v);
+        add(right, y, "Entity Hitboxes", "Hide F3+B hitbox outlines", NoRenderCfg.noEntityHitboxOutline, v -> NoRenderCfg.noEntityHitboxOutline = v);
     }
 
     private record WidgetEntry(AbstractWidget widget, int originalX, int originalY) {
